--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   redis1:
-    image: redis:3
+    image: redis
     ports:
       - "7000:7000"
     volumes:
@@ -11,7 +11,7 @@ services:
       app_net:
         ipv4_address: 173.17.0.2
   redis2:
-    image: redis:3
+    image: redis
     ports:
       - "7001:7001"
     volumes:
@@ -21,7 +21,7 @@ services:
       app_net:
         ipv4_address: 173.17.0.3
   redis3:
-    image: redis:3
+    image: redis
     ports:
       - "7002:7002"
     volumes:
@@ -30,20 +30,6 @@ services:
     networks:
       app_net:
         ipv4_address: 173.17.0.4
-  redis-cluster:
-    tty: true
-    build:
-      context: .
-      args:
-        redis_version: '3.2.9'
-    hostname: server
-    depends_on:
-      - redis1
-      - redis2
-      - redis3
-    networks:
-      app_net:
-        ipv4_address: 173.17.0.5
 networks:
   app_net:
     driver: bridge
